fix(04): prevent coin jump animation from overlapping controls

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -188,14 +188,14 @@
 .coin-scene {
   perspective: 600px;
   width: 64px;
-  height: 64px;
-  padding-top: 60px;
+  height: 128px;
 }
 
 .coin-disc {
-  width: 100%;
-  height: 100%;
+  width: 64px;
+  height: 64px;
   position: relative;
+  top: 64px;
   transform-style: preserve-3d;
   transition: transform 0.1s;
   will-change: transform;
